--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
 
         <a href="#" class="nav__button">Login</a>
 
-        <div class="'nav__close" id="nav-close">
+        <div class="nav__close" id="nav-close">
           <i class="ri-close-line"></i>
         </div>
       </div>
