--- a/tracker2.html
+++ b/tracker2.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
-  <title>INFO340 AU23 G7 Tracker: Your Frequent Drinks</title>
+  <title>Your Frequent Drinks</title>
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
