--- a/account.html
+++ b/account.html
@@ -5,11 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
-  <title>INFO340 AU23 G7 Proposal</title>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins&family=Aleo:wght@300;400&display=swap" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
+  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
+
   <link rel="stylesheet" href="css/style2.css">
+  <title>Profile Page</title>
 </head>
 
 <body>
@@ -57,9 +60,9 @@
   <main>
     <div class="flex-container">
       <img class="profile-picture" src="img/profile-picture.jpg" alt="profile picture">
-      <button>
-        edit profile
-      </button>
+      <div class="d-flex justify-content-end pt-2">
+        <button class="nav__button"> Edit profile </button>
+      </div>
     </div>
     <div class="account-data">
       <h2> Username </h2>
@@ -68,40 +71,47 @@
     </div>
 
 
-    <div class="flex-container">
-      <div class="posts flex-items">
+    <div class="d-flex">
+      <div class="posts profile-content">
         <h3> Posts </h3>
       </div>
-      <div class="saved-drinks flex-items">
+      <div class="saved-drinks profile-content">
         <h3> Saved </h3>
       </div>
-      <div class="tried-drinks flex-items">
+      <div class="tried-drinks profile-content">
         <h3> Tasted </h4>
       </div>
     </div>
 
 
-    <div class="flex-container content-holder" >
-      <div class="posts flex-items">
+    <div class="d-flex " >
+      <div>
         <ul>
           <li> white chocolate mocha</li>
           <li> mocha frappe </li>
         </ul>
       </div>
-      <div class="saved-drinks flex-items">
+      <div>
         <ul>
           <li> white chocolate mocha</li>
           <li> mocha frappe </li>
         </ul>
       </div>
-      <div class="tried-drinks flex-items">
+      <div>
         <ul>
           <li> white chocolate mocha</li>
           <li> mocha frappe </li>
         </ul>
       </div>
     </div>
-  </main>    
+  </main>   
 
+  <footer>
+    <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
+  </footer>
+  
+  
+ <!-- Link to JS  -->
+ <script src="js/main.js"></script> 
 </body>
 </html>
