--- a/tracker3.html
+++ b/tracker3.html
@@ -13,10 +13,45 @@
 </head>
 
 <body>
-  <header>
-    <h1>Log Your Caffeine</h1>
-  </header>
+    <!-- Header -->
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">
+                <i class="ri-cup-line"></i> Coffee
+            </a>
 
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a href="main.html" class="nav__link">Home</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="orders.html" class="nav__link">Custom Orders</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="tracker.html" class="nav__link">Tracker</a>
+                    </li>
+
+                    <li class="nav__item">
+                        <a href="quiz.html" class="nav__link">Quiz</a>
+                    </li>
+                </ul>
+
+                <a href="account.html" class="nav__button">Account</a>
+
+                <div class="'nav__close" id="nav-close">
+                    <i class="ri-close-line"></i>
+                </div>
+            </div>
+
+            <div class="'toggle" id="nav-toggle">
+                <i class="ri-menu-line"></i>
+            </div>
+        </nav>
+    </header>
+    
 <main>
   <!-- 1 nav style -->
 <div class="navbar2 justify-content-evenly"> 
