Fixed mainpage image overlay

--- a/main.html
+++ b/main.html
@@ -62,6 +62,7 @@
     <!-- Home -->
     <section class="home" id="home">
       <div class="home-text">
+        <p>EXPLORE THE WORLD OF COFFEE</p>
         <h1>Start Exploring <br> Personalized Coffee</h1>
         <p>Connect with other coffee enthusiasts, discover customized coffee beyond the common menu.</p>
         <a href="#" class="home-btn">Get Started</a>
