--- a/main.html
+++ b/main.html
@@ -74,11 +74,12 @@
     </section>
 
     <!-- Custom orders -->
-    <section class="about" id="about">
-      <div class>
-
+    <section class="orders" id="orders">
+      <div class="heading">
+        <h1>Share Custom Orders</h1>
       </div>
     </section>
+    
   </main>
 
 
