Begin adding to orders page

--- a/orders.html
+++ b/orders.html
@@ -55,8 +55,17 @@
         </nav>
     </header>
 
+    <main>
+        <div class="custom-drinks">
+            <img src="img/card1.jpg" alt="mint cold brew">
+            <img src="img/card2.jpg" alt="milky shaken espresso">
+            <img src="img/card3.jpg" alt="dairy free white mocha">
+            <img src="img/card4.jpg" alt="pumpkin cinammon blend">
+        </div>
+    </main>
+
     <footer>
-        <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
+        <!-- <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p> -->
     </footer>
     <script src="js/main.js"></script>
 </body>
