--- a/main.html
+++ b/main.html
@@ -18,30 +18,30 @@
 <!-- Header -->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="#" class="nav__logo">
+      <a href="main.html" class="nav__logo">
         <i class="ri-cup-line"></i> Coffee
       </a>
 
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="#" class="nav__link">Home</a>
+            <a href="main.html" class="nav__link">Home</a>
           </li>
 
           <li class="nav__item">
-            <a href="#" class="nav__link">Custom Orders</a>
+            <a href="orders.html" class="nav__link">Custom Orders</a>
           </li>
 
           <li class="nav__item">
-            <a href="#" class="nav__link">Tracker</a>
+            <a href="tracker.html" class="nav__link">Tracker</a>
           </li>
 
           <li class="nav__item">
-            <a href="#" class="nav__link">Quiz</a>
+            <a href="quiz.html" class="nav__link">Quiz</a>
           </li>
         </ul>
 
-        <a href="#" class="nav__button">Login</a>
+        <a href="account.html" class="nav__button">Login</a>
 
         <div class="nav__close" id="nav-close">
           <i class="ri-close-line"></i>
@@ -74,11 +74,14 @@
     </section>
 
     <!-- Custom orders -->
-    <section class="orders" id="orders">
-      <div class="heading">
-        <h1>Share Custom Orders</h1>
-      </div>
-    </section>
+    <div id="section1">
+      <section class="orders" id="orders">
+        <div class="heading">
+          <h1>Share Custom Orders</h1>
+        </div>
+      </section>
+    </div>
+    
     
   </main>
 
