--- a/account.html
+++ b/account.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
@@ -18,90 +18,95 @@
 <body>
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="#" class="nav__logo">
-        <i class="ri-cup-line"></i> Coffee
-      </a>
+        <a href="#" class="nav__logo">
+            <i class="ri-cup-line"></i> Coffee
+        </a>
 
-      <div class="nav__menu" id="nav-menu">
-        <ul class="nav__list">
-          <li class="nav__item">
-            <a href="#" class="nav__link">Home</a>
-          </li>
+        <div class="nav__menu" id="nav-menu">
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="main.html" class="nav__link">Home</a>
+                </li>
 
-          <li class="nav__item">
-            <a href="#" class="nav__link">Custom Orders</a>
-          </li>
+                <li class="nav__item">
+                    <a href="orders.html" class="nav__link">Custom Orders</a>
+                </li>
 
-          <li class="nav__item">
-            <a href="#" class="nav__link">Tracker</a>
-          </li>
+                <li class="nav__item">
+                    <a href="tracker.html" class="nav__link">Tracker</a>
+                </li>
 
-          <li class="nav__item">
-            <a href="#" class="nav__link">Quiz</a>
-          </li>
-        </ul>
+                <li class="nav__item">
+                    <a href="quiz.html" class="nav__link">Quiz</a>
+                </li>
+            </ul>
 
-        <a href="#" class="nav__button">Login</a>
+            <a href="account.html" class="nav__button">Account</a>
 
-        <div class="'nav__close" id="nav-close">
-          <i class="ri-close-line"></i>
+            <div class="'nav__close" id="nav-close">
+                <i class="ri-close-line"></i>
+            </div>
         </div>
-      </div>
 
-      <div class="'toggle" id="nav-toggle">
-        <i class="ri-menu-line"></i>      
-      </div>
+        <div class="'toggle" id="nav-toggle">
+            <i class="ri-menu-line"></i>
+        </div>
     </nav>
-    <div>
-
-    </div>
-  </header>
+</header>
 
   <main>
-    <div class="flex-container">
+    <div class="block-container">
       <img class="profile-picture" src="img/profile-picture.jpg" alt="profile picture">
-      <div class="d-flex justify-content-end pt-2">
+      <div class="flex-box">
         <button class="nav__button"> Edit profile </button>
       </div>
     </div>
     <div class="account-data">
-      <h2> Username </h2>
+      <h2> @Username </h2>
       <p> First Name, Last Name </p>
       <p> Joined date xx/xxxx</p>
     </div>
 
-
-    <div class="d-flex">
-      <div class="posts profile-content">
-        <h3> Posts </h3>
+    <div class="flex-box">
+      <div class="posts-title profile-content">
+        <h2> Posts </h2>
       </div>
       <div class="saved-drinks profile-content">
-        <h3> Saved </h3>
+        <h2> Saved </h2>
       </div>
       <div class="tried-drinks profile-content">
-        <h3> Tasted </h4>
+        <h2> Tasted </h2>
       </div>
     </div>
 
 
-    <div class="d-flex " >
+    <div class="flex-box post-cards">
       <div>
-        <ul>
-          <li> white chocolate mocha</li>
-          <li> mocha frappe </li>
-        </ul>
-      </div>
-      <div>
-        <ul>
-          <li> white chocolate mocha</li>
-          <li> mocha frappe </li>
-        </ul>
-      </div>
-      <div>
-        <ul>
-          <li> white chocolate mocha</li>
-          <li> mocha frappe </li>
-        </ul>
+        <!-- Post 1 -->
+        <div>
+            <img src="img/icedcoffee.jpg" alt="iced coffee">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</p>
+        </div>
+        <!-- Post 2 -->
+        <div>
+            <img src="img/mintcoldbrew.jpg" alt="mint cold brew">
+            <p>Doloremque commodi unde eaque! Et natus dolorum corrupti ut numquam.</p>
+        </div>
+        <!-- Post 3 -->
+        <div>
+            <img src="img/milkyespresso.jpg" alt="milky espresso">
+            <p>Odio praesentium cum nemo nesciunt architecto, quam voluptate porro inventore.</p>
+        </div>
+        <!-- Post 4 -->
+        <div>
+            <img src="img/dairyfreemocha.jpg" alt="dairy free mocha">
+            <p>Dignissimos consequuntur maxime harum debitis ratione, culpa iure pariatur quaerat?</p>
+        </div>
+        <!-- Post 5 -->
+        <div>
+            <img src="img/pumpkinblend.jpg" alt="pumpkin blend">
+            <p>Odit id earum commodi tempora voluptatum mollitia dolorum, perspiciatis nulla!</p>
+        </div>
       </div>
     </div>
   </main>   
@@ -109,7 +114,6 @@
   <footer>
     <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
   </footer>
-  
   
  <!-- Link to JS  -->
  <script src="js/main.js"></script> 
