Fix the drink cards' separation

--- a/orders.html
+++ b/orders.html
@@ -57,11 +57,10 @@
 
     <main>
         <div class="custom-drinks">
+            <img src="img/post-order.jpg" alt="card to post an order">
             <img src="img/card1.jpg" alt="mint cold brew">
             <img src="img/card2.jpg" alt="milky shaken espresso">
-            <img src="img/card3.jpg" alt="dairy free white mocha">
             <img src="img/card4.jpg" alt="pumpkin cinammon blend">
-            <img src="img/post-order.png" alt="card to post an order"
         </div>
     </main>
 
