Add header title and footer to orders page

--- a/orders.html
+++ b/orders.html
@@ -55,6 +55,8 @@
         </nav>
     </header>
 
+    <h1 class="custom-orders">Custom Orders</h1>
+
     <main>
         <div class="custom-drinks">
             <img src="img/post-order.jpg" alt="card to post an order">
@@ -65,7 +67,7 @@
     </main>
 
     <footer>
-        <!-- <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p> -->
+        <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
     </footer>
     <script src="js/main.js"></script>
 </body>
