update footer for all pages

--- a/main.html
+++ b/main.html
@@ -87,7 +87,9 @@
 
 
 
-
+  <footer>
+    <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
+  </footer>
   <!-- GSAP -->
   <!-- <script src>""</script>  -->
 
