--- a/orders.html
+++ b/orders.html
@@ -65,7 +65,7 @@
     </main>
 
     <footer>
-        <!-- <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p> -->
+        <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
     </footer>
     <script src="js/main.js"></script>
 </body>
