--- a/signin.html
+++ b/signin.html
@@ -18,6 +18,10 @@
 
   <main>
 
-  </main>    
+  </main> 
+  <footer>
+    <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
+  </footer>   
 </body>
+
 </html>
