--- a/tracker.html
+++ b/tracker.html
@@ -244,7 +244,11 @@
       <button type="button" class="btn btn-primary">Log Drink</button>
     </div>
   </main>
+  <footer>
+    <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
+  </footer>
   <script src="js/main.js"></script>
 </body>
+
 
 </html>
