--- a/tracker4.html
+++ b/tracker4.html
@@ -115,6 +115,9 @@
 </body>
 </div>  
 </main>
+<footer>
+  <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
+</footer>
 <script src="js/main.js"></script> 
 </body>
 
