--- a/tracker2.html
+++ b/tracker2.html
@@ -165,6 +165,9 @@
   </div>
   
 </main>
+<footer>
+  <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
+</footer>
 <script src="js/main.js"></script> 
 </body>
 
