--- a/quiz.html
+++ b/quiz.html
@@ -125,7 +125,7 @@
   </header>
 
   <h1 class="quiz-header">Coffee Quiz</h1>
-  
+
   <main>
     <section class="question">
       <p>Question #/##</p>
@@ -143,8 +143,8 @@
     </section>
 
     <section class="buttons">
-      <div class="previous">Previous</div>
-      <div class="next">Next</div>
+      <div class="primary-button">Previous</div>
+      <div class="primary-button">Next</div>
     </section>
 
   </main>
