--- a/tracker2.html
+++ b/tracker2.html
@@ -50,78 +50,17 @@
             <i class="ri-menu-line"></i>
         </div>
     </nav>
-</header>
-<!-- Header -->
-    <header class="header" id="header">
-        <nav class="nav container">
-            <a href="#" class="nav__logo">
-                <i class="ri-cup-line"></i> Coffee
-            </a>
-
-            <div class="nav__menu" id="nav-menu">
-                <ul class="nav__list">
-                    <li class="nav__item">
-                        <a href="main.html" class="nav__link">Home</a>
-                    </li>
-
-                    <li class="nav__item">
-                        <a href="orders.html" class="nav__link">Custom Orders</a>
-                    </li>
-
-                    <li class="nav__item">
-                        <a href="tracker.html" class="nav__link">Tracker</a>
-                    </li>
-
-                    <li class="nav__item">
-                        <a href="quiz.html" class="nav__link">Quiz</a>
-                    </li>
-                </ul>
-
-                <a href="account.html" class="nav__button">Account</a>
-
-                <div class="'nav__close" id="nav-close">
-                    <i class="ri-close-line"></i>
-                </div>
-            </div>
-
-            <div class="'toggle" id="nav-toggle">
-                <i class="ri-menu-line"></i>
-            </div>
-        </nav>
     </header>
-<main>
-  <!-- 1 nav style -->
-<div class="navbar2 justify-content-evenly"> 
-    <!-- 2 bar style -->
-    <div class="bar">
-      <!-- 3 border -->
-      <div class="border">
-        <!-- 4 font style -->
-        <h2>Manual Input</h2>
-      </div>
-    </div>  
-  
-    <div class="bar">
-      <div class="border" id="select">
-        <h2>Your Frequent Drinks</h2>
-      </div>
-    </div>
-  
-    <div class="bar">
-      <div class="border">
-        <h2>Favorites</h2>
-      </div>
-    </div>
-  
-    <div class="bar">
-      <div class="border">
-        <h2>Caffeine Log</h2>
-      </div>
-    </div>
-  </div>
 
+  <!-- navigate to other trackers -->
+  <section class="tracker-navi"> 
+    <a class="secondary-button" href="tracker.html">Log Your Drink</a>
+    <a class="secondary-button" href="tracker3.html">Favorite Drinks</a>
+  </section>
+  
+  <main>
   <!-- cards source: bootstrap -->
-  <div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="groupcards row row-cols-1 row-cols-md-2 g-4">
     <div class="col-sm-6 justify-content-evenly">
       <div class="card">
         <img src="img/icedcoffee.jpg" class="card-img-top" alt="iced coffee">
@@ -163,8 +102,8 @@
       </div>
     </div>
   </div>
-  
 </main>
+
 <script src="js/main.js"></script> 
 </body>
 
