--- a/tracker3.html
+++ b/tracker3.html
@@ -51,40 +51,10 @@
             </div>
         </nav>
     </header>
-    
-<main>
-  <!-- 1 nav style -->
-<div class="navbar2 justify-content-evenly"> 
-    <!-- 2 bar style -->
-    <div class="bar">
-      <!-- 3 border -->
-      <div class="border">
-        <!-- 4 font style -->
-        <h2>Manual Input</h2>
-      </div>
-    </div>  
-  
-    <div class="bar">
-      <div class="border">
-        <h2>Your Frequent Drinks</h2>
-      </div>
-    </div>
-  
-    <div class="bar">
-      <div class="border" id="select">
-        <h2>Favorites</h2>
-      </div>
-    </div>
-  
-    <div class="bar">
-      <div class="border">
-        <h2>Caffeine Log</h2>
-      </div>
-    </div>
-  </div>
 
+<main>
   <!-- cards source: bootstrap -->
-  <div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="groupcards row row-cols-1 row-cols-md-2 g-4">
     <div class="col-sm-6 justify-content-evenly">
       <div class="card">
         <img src="img/icedcoffee.jpg" class="card-img-top" alt="iced coffee">
