--- a/tracker2.html
+++ b/tracker2.html
@@ -55,7 +55,9 @@
   <!-- navigate to other trackers -->
   <section class="tracker-navi"> 
     <a class="secondary-button" href="tracker.html">Log Your Drink</a>
+    <a class="secondary-button" href="tracker2.html">Frequent Drinks</a>
     <a class="secondary-button" href="tracker3.html">Favorite Drinks</a>
+    <a class="secondary-button" href="tracker4.html">Caffeine Logs</a>
   </section>
   
   <main>
