--- a/tracker4.html
+++ b/tracker4.html
@@ -50,8 +50,13 @@
             <i class="ri-menu-line"></i>
         </div>
     </nav>
-</header>
-
+    </header>
+<section class="tracker-navi"> 
+    <a class="secondary-button" href="tracker.html">Log Your Drink</a>
+    <a class="secondary-button" href="tracker2.html">Frequent Drinks</a>
+    <a class="secondary-button" href="tracker3.html">Favorite Drinks</a>
+    <a class="secondary-button" href="tracker4.html">Caffeine Logs</a>
+  </section>
 <main>
     <img class="cal" src="img/cal.png" alt="may 2023 calendar">
 </main>
