--- a/main.html
+++ b/main.html
@@ -59,7 +59,7 @@
 
   <!-- Main -->
   <main class="main">
-    <!-- Home -->
+    <!-- Section 1:Home -->
     <div id="section1">
       <section class="home" id="home">
         <div class="home-text">
@@ -74,7 +74,7 @@
       </section>
     </div>
 
-    <!-- Custom orders -->
+    <!-- Section 2:Custom orders -->
     <div id="section2">
       <section class="orders" id="orders">
         <div class="heading">
@@ -82,7 +82,25 @@
         </div>
       </section>
     </div>
-    
+
+    <!-- Section 3:Tracker -->
+    <!-- <div id="section3">
+      <section class="tracker" id="tracker">
+        <div class="heading">
+          <h1>Share Custom Orders</h1>
+        </div>
+      </section>
+    </div> -->
+
+    <!-- Section 4:Quiz -->
+    <!-- <div id="section4">
+      <section class="orders" id="orders">
+        <div class="heading">
+          <h1>Share Custom Orders</h1>
+        </div>
+      </section>
+    </div> -->
+
   </main>
 
 
