--- a/account.html
+++ b/account.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
-  <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons"
+    rel="stylesheet">
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -18,41 +19,41 @@
 <body>
   <header class="header" id="header">
     <nav class="nav container">
-        <a href="#" class="nav__logo">
-            <i class="ri-cup-line"></i> Coffee
-        </a>
+      <a href="#" class="nav__logo">
+        <i class="ri-cup-line"></i> Coffee
+      </a>
 
-        <div class="nav__menu" id="nav-menu">
-            <ul class="nav__list">
-                <li class="nav__item">
-                    <a href="main.html" class="nav__link">Home</a>
-                </li>
+      <div class="nav__menu" id="nav-menu">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="main.html" class="nav__link">Home</a>
+          </li>
 
-                <li class="nav__item">
-                    <a href="orders.html" class="nav__link">Custom Orders</a>
-                </li>
+          <li class="nav__item">
+            <a href="orders.html" class="nav__link">Custom Orders</a>
+          </li>
 
-                <li class="nav__item">
-                    <a href="tracker.html" class="nav__link">Tracker</a>
-                </li>
+          <li class="nav__item">
+            <a href="tracker.html" class="nav__link">Tracker</a>
+          </li>
 
-                <li class="nav__item">
-                    <a href="quiz.html" class="nav__link">Quiz</a>
-                </li>
-            </ul>
+          <li class="nav__item">
+            <a href="quiz.html" class="nav__link">Quiz</a>
+          </li>
+        </ul>
 
-            <a href="account.html" class="nav__button">Account</a>
+        <a href="account.html" class="nav__button">Account</a>
 
-            <div class="'nav__close" id="nav-close">
-                <i class="ri-close-line"></i>
-            </div>
+        <div class="'nav__close" id="nav-close">
+          <i class="ri-close-line"></i>
         </div>
+      </div>
 
-        <div class="'toggle" id="nav-toggle">
-            <i class="ri-menu-line"></i>
-        </div>
+      <div class="'toggle" id="nav-toggle">
+        <i class="ri-menu-line"></i>
+      </div>
     </nav>
-</header>
+  </header>
 
   <main>
     <div class="block-container">
@@ -85,38 +86,39 @@
       <div>
         <!-- Post 1 -->
         <div>
-            <img src="img/icedcoffee.jpg" alt="iced coffee">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</p>
+          <img src="img/icedcoffee.jpg" alt="iced coffee">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</p>
         </div>
         <!-- Post 2 -->
         <div>
-            <img src="img/mintcoldbrew.jpg" alt="mint cold brew">
-            <p>Doloremque commodi unde eaque! Et natus dolorum corrupti ut numquam.</p>
+          <img src="img/mintcoldbrew.jpg" alt="mint cold brew">
+          <p>Doloremque commodi unde eaque! Et natus dolorum corrupti ut numquam.</p>
         </div>
         <!-- Post 3 -->
         <div>
-            <img src="img/milkyespresso.jpg" alt="milky espresso">
-            <p>Odio praesentium cum nemo nesciunt architecto, quam voluptate porro inventore.</p>
+          <img src="img/milkyespresso.jpg" alt="milky espresso">
+          <p>Odio praesentium cum nemo nesciunt architecto, quam voluptate porro inventore.</p>
         </div>
         <!-- Post 4 -->
         <div>
-            <img src="img/dairyfreemocha.jpg" alt="dairy free mocha">
-            <p>Dignissimos consequuntur maxime harum debitis ratione, culpa iure pariatur quaerat?</p>
+          <img src="img/dairyfreemocha.jpg" alt="dairy free mocha">
+          <p>Dignissimos consequuntur maxime harum debitis ratione, culpa iure pariatur quaerat?</p>
         </div>
         <!-- Post 5 -->
         <div>
-            <img src="img/pumpkinblend.jpg" alt="pumpkin blend">
-            <p>Odit id earum commodi tempora voluptatum mollitia dolorum, perspiciatis nulla!</p>
+          <img src="img/pumpkinblend.jpg" alt="pumpkin blend">
+          <p>Odit id earum commodi tempora voluptatum mollitia dolorum, perspiciatis nulla!</p>
         </div>
       </div>
     </div>
-  </main>   
+  </main>
 
   <footer>
     <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
   </footer>
-  
- <!-- Link to JS  -->
- <script src="js/main.js"></script> 
+
+  <!-- Link to JS  -->
+  <script src="js/main.js"></script>
 </body>
+
 </html>
