--- a/tracker2.html
+++ b/tracker2.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
   <title>Your Frequent Drinks</title>
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -106,7 +105,7 @@
   </div>
 </main>
 <footer>
-  <p>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</p>
+  <h6>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</h6>
 </footer>
 <script src="js/main.js"></script> 
 </body>
