--- a/tracker3.html
+++ b/tracker3.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
   <title>Your Favorited Drinks</title>
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -53,10 +52,18 @@
         </header>
 
     <section class="tracker-navi"> 
-        <a class="secondary-button" href="tracker.html">Log Your Drink</a>
-        <a class="secondary-button" href="tracker2.html">Frequent Drinks</a>
-        <a class="secondary-button" href="tracker3.html">Favorite Drinks</a>
-        <a class="secondary-button" href="tracker4.html">Caffeine Logs</a>
+        <div class="t-navi">
+            <a class="secondary-button" href="tracker.html">Log Your Drink</a>
+        </div>
+        <div class="t-navi">
+            <a class="secondary-button" href="tracker2.html">Frequent Drinks</a>
+        </div>
+        <div class="t-navi"> 
+            <a class="secondary-button" href="tracker3.html">Favorite Drinks</a>
+        </div>
+        <div class="t-navi"> 
+            <a class="secondary-button" href="tracker4.html">Caffeine Logs</a>
+        </div>
       </section>
 
 <main>
