css file name change

--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
 
-  <link rel="stylesheet" href="css/style2.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Coffee Quiz Page</title>
 </head>
 
