--- a/tracker4.html
+++ b/tracker4.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/style2.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -50,12 +50,20 @@
         </div>
     </nav>
     </header>
-<section class="tracker-navi"> 
-    <a class="secondary-button" href="tracker.html">Log Your Drink</a>
-    <a class="secondary-button" href="tracker2.html">Frequent Drinks</a>
-    <a class="secondary-button" href="tracker3.html">Favorite Drinks</a>
-    <a class="secondary-button" href="tracker4.html">Caffeine Logs</a>
-  </section>
+    <section class="tracker-navi"> 
+        <div class="t-navi">
+            <a class="secondary-button" href="tracker.html">Log Your Drink</a>
+        </div>
+        <div class="t-navi">
+            <a class="secondary-button" href="tracker2.html">Frequent Drinks</a>
+        </div>
+        <div class="t-navi"> 
+            <a class="secondary-button" href="tracker3.html">Favorite Drinks</a>
+        </div>
+        <div class="t-navi"> 
+            <a class="secondary-button" href="tracker4.html">Caffeine Logs</a>
+        </div>
+    </section>
 <main>
     <img class="cal" src="img/cal.png" alt="may 2023 calendar">
 </main>
