--- a/tracker.html
+++ b/tracker.html
@@ -12,9 +12,8 @@
 </head>
 
 <body>
-  <header class="header" id="header">
     <!-- Header -->
-    <header class="header" id="header">
+    <header class="header">
       <nav class="nav container">
           <a href="#" class="nav__logo">
               <i class="ri-cup-line"></i> Coffee
