--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 <!-- Header -->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="main.html" class="nav__logo">
+      <a href="index.html" class="nav__logo">
         <i class="ri-cup-line"></i> Coffee
       </a>
 
       <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
           <li class="nav__item">
-            <a href="main.html" class="nav__link">Home</a>
+            <a href="index.html" class="nav__link">Home</a>
           </li>
 
           <li class="nav__item">
