--- a/tracker.html
+++ b/tracker.html
@@ -22,7 +22,7 @@
           <div class="nav__menu" id="nav-menu">
               <ul class="nav__list">
                   <li class="nav__item">
-                      <a href="main.html" class="nav__link">Home</a>
+                      <a href="index.html" class="nav__link">Home</a>
                   </li>
   
                   <li class="nav__item">
