--- a/tracker3.html
+++ b/tracker3.html
@@ -16,7 +16,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <i class="ri-cup-line"></i> Coffee
+                <i class="ri-cup-line"></i> Brew Lab
             </a>
     
             <div class="nav__menu" id="nav-menu">
