--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="header" id="header">
     <nav class="nav container">
       <a href="index.html" class="nav__logo">
-        <i class="ri-cup-line"></i> Coffee
+        <i class="ri-cup-line"></i> Brew Lab
       </a>
 
       <div class="nav__menu" id="nav-menu">
