--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <header class="header" id="header">
     <nav class="nav container">
       <a href="index.html" class="nav__logo">
-        <i class="ri-cup-line"></i> BrewLab
+        <i class="ri-cup-line"></i> Brew Lab
       </a>
 
       <div class="nav__menu" id="nav-menu">
@@ -84,22 +84,22 @@
     </div>
 
     <!-- Section 3:Tracker -->
-    <!-- <div id="section3">
+    <div id="section3">
       <section class="tracker" id="tracker">
         <div class="heading">
-          <h1>Share Custom Orders</h1>
+          <h1>Track Your Drinks</h1>
         </div>
       </section>
-    </div> -->
+    </div>
 
     <!-- Section 4:Quiz -->
-    <!-- <div id="section4">
+    <div id="section4">
       <section class="orders" id="orders">
         <div class="heading">
-          <h1>Share Custom Orders</h1>
+          <h1>Want to try something new?<br>Take our Coffee Quiz!</h1>
         </div>
       </section>
-    </div> -->
+    </div>
 
   </main>
 
@@ -115,5 +115,6 @@
    <script src="js/main.js"></script> 
 </body>
 </html>
+
 
 
