Added favicon to all html pages

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="Hannah Yi, Grace Suyama, Kayla Doan, Athena Le">
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap&family=Material+Icons" rel="stylesheet">
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> -->
-  <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
+  <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
 
   <link rel="stylesheet" href="css/style.css">
