--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           </li>
 
           <li class="nav__item">
-            <a href="tracker.html" class="nav__link">Tracker</a>
+            <a href="new-tracker.html" class="nav__link">Tracker</a>
           </li>
 
           <li class="nav__item">
