tracker2 page updates

--- a/new-tracker.html
+++ b/new-tracker.html
@@ -54,16 +54,15 @@
     <h1 class="trackHeader">Log Your Caffeine</h1>
     
     <!-- secondary navigation bar for tracker pages -->
-    <!-- should i even have navigation pages for the tracker? -->
     <div class="tracker-navi">
-        <ul>
+        <div class = "tracker-buttons">
             <div class="t-button"><li class="content-navi"><a href="new-tracker.html">Track Your Coffee</a></li></div>
             <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker2.html">Your Frequent Drinks</a></li></div>
             <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker3.html">Favorited Drinks</a></li></div>
             <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker4.html">Caffeine Logs</a></li></div>
-        </ul>
+        </div>
     </div>
-
+    
     <!-- container -->
     <div class="logging"> 
         <!-- drink type -->
