--- a/tracker2.html
+++ b/tracker2.html
@@ -6,13 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Your Frequent Drinks</title>
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="tracker">
   <!-- Header -->
   <header class="header" id="header">
     <nav class="nav container">
@@ -51,27 +49,23 @@
         </div>
     </nav>
     </header>
-
-  <!-- navigate to other trackers -->
-  <section class="tracker-navi"> 
-    <div class="t-navi">
-        <a class="secondary-button" href="tracker.html">Log Your Drink</a>
-    </div>
-    <div class="t-navi">
-        <a class="secondary-button" href="tracker2.html">Frequent Drinks</a>
-    </div>
-    <div class="t-navi"> 
-        <a class="secondary-button" href="tracker3.html">Favorite Drinks</a>
-    </div>
-    <div class="t-navi"> 
-        <a class="secondary-button" href="tracker4.html">Caffeine Logs</a>
-    </div>
-</section>
   
   <main>
+  <h1 class="trackHeader">History of Your Frequent Drinks</h1>
+
+  <!-- navigate to other trackers -->
+  <div class="tracker-navi">
+    <div class = "tracker-buttons">
+        <div class="t-button"><li class="content-navi"><a href="new-tracker.html">Track Your Coffee</a></li></div>
+        <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker2.html">Your Frequent Drinks</a></li></div>
+        <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker3.html">Favorited Drinks</a></li></div>
+        <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker4.html">Caffeine Logs</a></li></div>
+    </div>
+</div>
+
   <!-- cards source: bootstrap -->
-  <div class="groupcards row row-cols-1 row-cols-md-2 g-4">
-    <div class="col-sm-6 justify-content-evenly">
+  <div>
+    <div>
       <div class="card">
         <img src="img/icedcoffee.jpg" class="card-img-top" alt="iced coffee">
         <div class="card-body">
@@ -81,7 +75,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-6 justify-content-evenly">
+    <div>
       <div class="card">
         <img src="img/icedcoffee.jpg" class="card-img-top" alt="iced coffee">
         <div class="card-body">
@@ -91,7 +85,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-6 justify-content-evenly">
+    <div>
       <div class="card">
         <img src="img/icedcoffee.jpg" class="card-img-top" alt="iced coffee">
         <div class="card-body">
@@ -101,7 +95,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-6 justify-content-evenly">
+    <div>
       <div class="card">
         <img src="img/icedcoffee.jpg" class="card-img-top" alt="iced coffee">
         <div class="card-body">
@@ -113,6 +107,7 @@
     </div>
   </div>
 </main>
+
 <footer>
   <h6>&copy; Hannah Yi, Grace Suyama, Kayla Doan, Athena Le & INFO 340</h6>
 </footer>
