--- a/tracker4.html
+++ b/tracker4.html
@@ -6,13 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Caffeine Log</title>
   <link href="https://fonts.googleapis.com/css2?family=Rosarivo&family=Poppins&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="icon" href="img/favicon.png" type="image/png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body>
+<body class="tracker">
   <!-- Header -->
   <header class="header" id="header">
     <nav class="nav container">
@@ -51,21 +49,20 @@
         </div>
     </nav>
     </header>
-    <section class="tracker-navi"> 
-        <div class="t-navi">
-            <a class="secondary-button" href="tracker.html">Log Your Drink</a>
-        </div>
-        <div class="t-navi">
-            <a class="secondary-button" href="tracker2.html">Frequent Drinks</a>
-        </div>
-        <div class="t-navi"> 
-            <a class="secondary-button" href="tracker3.html">Favorite Drinks</a>
-        </div>
-        <div class="t-navi"> 
-            <a class="secondary-button" href="tracker4.html">Caffeine Logs</a>
-        </div>
-    </section>
+
 <main>
+    <h1 class="trackHeader">Calendar</h1>
+
+  <!-- navigate to other trackers -->
+    <div class="tracker-navi">
+        <div class = "tracker-buttons">
+            <div class="t-button"><li class="content-navi"><a href="new-tracker.html">Track Your Coffee</a></li></div>
+            <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker2.html">Your Frequent Drinks</a></li></div>
+            <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker3.html">Favorited Drinks</a></li></div>
+            <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker4.html">Caffeine Logs</a></li></div>
+        </div>
+    </div>
+
     <img class="cal" src="img/cal.png" alt="may 2023 calendar">
 </main>
 <footer>
