--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <p>EXPLORE THE WORLD OF COFFEE</p>
           <h1>Start Exploring <br> Personalized Coffee</h1>
           <p>Connect with other coffee enthusiasts, discover customized coffee beyond the common menu.</p>
-          <a href="#" class="home-btn">Get Started</a>
+          <a href="orders.html" class="home-btn">Get Started</a>
         </div>
         <div class="home-img">
           <img src="img/bgvector.png" alt="">
@@ -94,8 +94,8 @@
 
     <!-- Section 4:Quiz -->
     <div id="section4">
-      <section class="orders" id="orders">
-        <div class="heading">
+      <section class="quiz" id="quiz">
+        <div class="quiz-text">
           <h1>Want to try something new?<br>Take our Coffee Quiz!</h1>
         </div>
       </section>
