--- a/orders.html
+++ b/orders.html
@@ -57,10 +57,33 @@
     <main>
         <h1 class="custom-orders">Custom Orders</h1>
         <div class="custom-drinks">
-            <img src="img/post-order.jpg" alt="card to post an order">
-            <img src="img/card1.jpg" alt="mint cold brew">
-            <img src="img/card2.jpg" alt="milky shaken espresso">
-            <img src="img/card4.jpg" alt="pumpkin cinammon blend">
+            <div>
+                <!-- Post 1 -->
+                <div>
+                  <img src="img/icedcoffee.jpg" alt="iced coffee">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, laborum.</p>
+                </div>
+                <!-- Post 2 -->
+                <div>
+                  <img src="img/mintcoldbrew.jpg" alt="mint cold brew">
+                  <p>Doloremque commodi unde eaque! Et natus dolorum corrupti ut numquam.</p>
+                </div>
+                <!-- Post 3 -->
+                <div>
+                  <img src="img/milkyespresso.jpg" alt="milky espresso">
+                  <p>Odio praesentium cum nemo nesciunt architecto, quam voluptate porro inventore.</p>
+                </div>
+                <!-- Post 4 -->
+                <div>
+                  <img src="img/dairyfreemocha.jpg" alt="dairy free mocha">
+                  <p>Dignissimos consequuntur maxime harum debitis ratione, culpa iure pariatur quaerat?</p>
+                </div>
+                <!-- Post 5 -->
+                <div>
+                  <img src="img/pumpkinblend.jpg" alt="pumpkin blend">
+                  <p>Odit id earum commodi tempora voluptatum mollitia dolorum, perspiciatis nulla!</p>
+                </div>
+              </div>
         </div>
     </main>
 
