--- a/tracker4.html
+++ b/tracker4.html
@@ -54,14 +54,14 @@
     <h1 class="trackHeader">Calendar</h1>
 
   <!-- navigate to other trackers -->
-    <div class="tracker-navi">
-        <div class = "tracker-buttons">
-            <div class="t-button"><li class="content-navi"><a href="new-tracker.html">Track Your Coffee</a></li></div>
-            <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker2.html">Your Frequent Drinks</a></li></div>
-            <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker3.html">Favorited Drinks</a></li></div>
-            <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker4.html">Caffeine Logs</a></li></div>
-        </div>
+  <div class="tracker-nav"> 
+    <div class = "tracker-buttons">
+        <div class="t-button"><li class="content-navi"><a href="tracker.html">Track Your Coffee</a></li></div>
+        <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker2.html">Your Frequent Drinks</a></li></div>
+        <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker3.html">Favorited Drinks</a></li></div>
+        <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker4.html">Caffeine Logs</a></li></div>
     </div>
+</div>
 
     <img class="cal" src="img/cal.png" alt="may 2023 calendar">
 </main>
