--- a/tracker3.html
+++ b/tracker3.html
@@ -54,9 +54,9 @@
   <h1 class="trackHeader">Your Favorited Drinks</h1>
 
   <!-- navigate to other trackers -->
-  <div class="tracker-navi">
+  <div class="tracker-nav"> 
     <div class = "tracker-buttons">
-        <div class="t-button"><li class="content-navi"><a href="new-tracker.html">Track Your Coffee</a></li></div>
+        <div class="t-button"><li class="content-navi"><a href="tracker.html">Track Your Coffee</a></li></div>
         <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker2.html">Your Frequent Drinks</a></li></div>
         <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker3.html">Favorited Drinks</a></li></div>
         <div class="t-button"><li class="content-navi"><a class="text-navi" href="tracker4.html">Caffeine Logs</a></li></div>
